--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,35 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+p {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
+  line-height: 20px;
+  text-shadow: 1px 1px black;
+}
+.btn {
+  border: 5px solid black;
+  padding: 10px 30px;
+  color: black;
+  font-size: 20px;
+  line-height: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1em;
+  font-weight: bold;
+}
+.btn:hover {
+  color: white;
+  border: 3px solid white;
+}
 
 /* Header */
 .header {
   position: fixed;
   top: 0;
   width: 100%;
-  background: #30CC14;
+  background: #30cc14; /*Verde*/
   padding: 15px 0;
+  opacity: 0.8;
 }
 .header_menu {
   text-align: right;
@@ -33,3 +54,46 @@ body {
 }
 
 /* introdução */
+
+.introducao {
+  width: 100%;
+  height: 502px;
+  background: url("../img/bg2.jpg") no-repeat center;
+  background-size: cover;
+  text-align: center;
+  padding-top: 200px;
+  /* margin-top: 102px; */
+}
+.introducao h1 {
+  font-size: 48px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.venda {
+  text-shadow: 2px 2px black;
+}
+.quote-externo {
+  max-width: 320px;
+  margin: 0 auto;
+  color: white;
+  margin-bottom: 30px;
+}
+.quote-externo p {
+  font-style: italic;
+}
+.quote-externo p:before,
+.quote-externo p:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: white;
+  margin: 14px auto 10px auto;
+}
+.quote-externo cite {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.3em;
+}
