--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ p {
   text-shadow: 1px 1px black;
 }
 .btn {
-  border: 5px solid black;
+  border: 5px solid #30cc14;
   padding: 10px 30px;
-  color: black;
+  color: #30cc14;
   font-size: 20px;
   line-height: 20px;
   text-transform: uppercase;
@@ -22,6 +22,29 @@ p {
   color: white;
   border: 3px solid white;
 }
+.btn.btn-preto:hover {
+  color: black;
+  border: 3px solid black;
+}
+
+.subtitulo {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  color: #000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.subtitulo::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: rgb(0, 0, 0);
+  margin: 10px auto;
+}
 
 /* Header */
 .header {
@@ -31,6 +54,7 @@ p {
   background: #30cc14; /*Verde*/
   padding: 15px 0;
   opacity: 0.8;
+  z-index: 1;
 }
 .header_menu {
   text-align: right;
@@ -97,3 +121,72 @@ p {
   font-size: 14px;
   letter-spacing: 0.3em;
 }
+/* produtos */
+.produtos {
+  padding: 60px 0;
+}
+.produtos_lista li {
+  background: #000000;
+  height: 400px;
+  text-align: center;
+}
+.produtos_lista li h3 {
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin-top: 20px;
+}
+.produtos_lista li h3::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: white;
+  margin: 2px auto;
+}
+.produtos_lista li p {
+  color: white;
+  padding: 10px 20px 20px 20px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.produtos_icone {
+  background: #30cc14;
+  padding: 20px;
+}
+.call {
+  padding-top: 40px;
+  text-align: center;
+  clear: both;
+}
+.call p {
+  margin-bottom: 30px;
+}
+/* portfólio */
+.portfolio {
+  width: 100%;
+  background: black;
+  padding: 20px 0;
+}
+.portfolio .subtitulo {
+  color: #30cc14;
+}
+.portfolio .subtitulo:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #30cc14;
+  margin: 2px auto;
+}
+.portfolio_lista li:last-child{
+  margin-top: 20px;
+}
+.portfolio .call p{
+  color: white;
+} 
